# webcad

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  devtool  go.mod  go.sum  main.go  main_test.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  third_party_deps.bzl  tsconfig.json
.agents/: AGENTS.md
.github/workflows/: README.md  ci.yml  lint-pr.yml
devtools/: gaz  tidy
docs/: glossary.md
docs/design/: ci_check_granularity_and_cache_efficiency.md  document_storage.md  frontend_architecture_proposal.md  raster_image_generation_and_testing.md  workspace_transaction_model.md
docs/research/: gcs_parametric_equations_research.md  open_source_2d_solvers.md  web_2d_drawing_frameworks.md
examples/01-node-render-image/: BUILD.bazel  main.ts  package.json  tsconfig.json
frontend/: BUILD.bazel
go/cmd/devtool/: BUILD.bazel  go.mod  go.sum  main.go
go/cmd/hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
go/cmd/wasm_solver/: BUILD.bazel  main.go
go/solvers/bfgs/: BUILD.bazel  README.md  solver.go  solver_test.go
go/solvers/core/: BUILD.bazel  doc.go  evaluator.go  evaluator_test.go  solver.go  types.go  utils.go
go/solvers/core/constraints/: BUILD.bazel  angle.go  angle_test.go  coincidence.go  coincidence_test.go  concentric.go  concentric_test.go  distance.go  distance_test.go  doc.go  evaluator.go  fixed.go  fixed_test.go  horizontal.go  horizontal_distance.go  horizontal_distance_test.go  horizontal_test.go  midpoint.go  midpoint_test.go  parallel.go  parallel_test.go  perpendicular.go  perpendicular_test.go  registry.go  symmetric.go  symmetric_test.go  tangent.go  tangent_test.go  utils.go  vertical.go  vertical_distance.go  vertical_distance_test.go  vertical_test.go
go/solvers/core/gcstypes/: BUILD.bazel  types.go
go/solvers/lm/: BUILD.bazel  README.md  algorithm.go  doc.go  qr.go  solver.go  solver_test.go  workspace.go
poc/: BUILD.bazel  README.md  main.go  tsconfig.json
poc/gcsapi/: gcsapi.ts
poc/solver-wasm/: BUILD.bazel
poc/solver-wasm/src/: tests.rs
poc/ui/: index.html  main.ts  solver.ts  store.ts
proto/: BUILD.bazel  gcs.proto  types.go
ts/gcsapi/: BUILD.bazel  index.ts  package.json  tsconfig.json
web/: BUILD.bazel  README.md  defs.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/angular_hello_world/: BUILD.bazel  tsconfig.json
web/angular_hello_world/src/: index.html  main.ts
web/angular_hello_world/src/app/: app.component.test.ts  app.component.ts
web/poc/: BUILD.bazel  main.go  tsconfig.json
web/poc/gcsapi/: BUILD.bazel  gcsapi.ts  package.json  tsconfig.json
web/poc/geometry/: BUILD.bazel  project.ts  snap.ts  vector.ts
web/poc/model/: BUILD.bazel  document.ts  gcs_bridge.ts  history.ts  sketch.ts  store.ts
web/poc/node_workspace/: BUILD.bazel  index.ts  tsconfig.json
web/poc/solver-wasm/: Cargo.toml
web/poc/solver-wasm/src/: lib.rs
web/poc/tools/: BUILD.bazel  circle_tool.ts  dimension_tool.ts  line_tool.ts  point_tool.ts  select_tool.ts  tool.ts
web/poc/ui/: BUILD.bazel  index.html  main.ts  package.json  sidebar.ts  solver.ts  state.test.ts  state.ts  state_test.ts  store.ts  tsconfig.json  viewport.ts
web/poc/ui/app/: BUILD.bazel  app.component.ts
web/poc/ui/app/dimension-input/: BUILD.bazel  dimension-input.component.test.ts  dimension-input.component.ts
web/poc/ui/app/services/: BUILD.bazel  mcp.service.ts  tool.service.ts  workspace.service.test.ts  workspace.service.ts
web/poc/ui/app/sidebar/: BUILD.bazel  sidebar.component.ts
web/poc/ui/app/toolbar/: BUILD.bazel  compile_icons.go  icons.ts  toolbar.component.test.ts  toolbar.component.ts
web/poc/ui/app/toolbar/icons/: README.md
web/poc/ui/app/viewport/: BUILD.bazel  annotation_drawer.ts  node_workspace.ts  png_rasterizer.ts  raster_exporter.ts  svg_exporter.test.ts  svg_exporter.ts  viewport.component.ts  visual_regression.test.ts
web/poc/ui/interfaces/: BUILD.bazel  viewport_interfaces.ts
web/poc/units/: BUILD.bazel  expression.ts  units.test.ts  units.ts
web/runfilesserver/: BUILD.bazel  runfilesserver.go  runfilesserver_test.go
web/runfilesserver/testdata/solver/: dummy.wasm
web/runfilesserver/testdata/ui/: index.html
web/server/: BUILD.bazel  server.go
