load("@aspect_gazelle_prebuilt//:def.bzl", "aspect_gazelle")

# gazelle:prefix github.com/gonzojive/webcad
# gazelle:map_kind js_test js_test //web:defs.bzl

aspect_gazelle(
    name = "gazelle",
    languages = [
        "go",
        "js",
        "proto",
    ],
    repo_config = "@bazel_gazelle_go_repository_config//:WORKSPACE",
)
