# We use the prebuilt aspect_gazelle to speed up builds. If we need to write
# custom Gazelle extensions in the future (e.g. for custom code generation),
# we can switch this load to a source-compiled Gazelle target.
load("@aspect_gazelle_prebuilt//:def.bzl", "aspect_gazelle")

# gazelle:prefix github.com/gonzojive/webcad
# gazelle:map_kind js_test js_test //web:defs.bzl
# Exclude go/cmd/devtool from Gazelle compilation. This CLI utility is built natively
# with standard Go tools via the root wrapper script [./devtool](file:///home/red/.gemini/antigravity/worktrees/webcad/relax-solver-timeout-threshold/devtool) instead of
# Bazel. This keeps its CLI-specific dependencies isolated inside its own module at
# [go/cmd/devtool/go.mod](file:///home/red/.gemini/antigravity/worktrees/webcad/relax-solver-timeout-threshold/go/cmd/devtool/go.mod) and prevents polluting the root module.
# gazelle:exclude go/cmd/devtool

aspect_gazelle(
    name = "gazelle",
    languages = [
        "go",
        "js",
        "proto",
    ],
    repo_config = "@bazel_gazelle_go_repository_config//:WORKSPACE",
)
