module(
    name = "webcad",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "protobuf", version = "33.4")

# Configure the Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

# Configure Gazelle to use go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps)

bazel_dep(name = "rules_rust", version = "0.71.3")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.71.3")

# Configure the Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = ["wasm32-unknown-unknown"],
    versions = ["1.88.0"],
)
use_repo(rust, "rust_toolchains")

# Fetch external repositories
third_party_deps = use_extension("//:third_party_deps.bzl", "third_party_deps")
use_repo(third_party_deps, "ezpz")

# Configure external crates from the ezpz Cargo workspace
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "serde",
    version = "1.0.100",
    features = ["derive"],
)
crate.spec(
    package = "serde_json",
    version = "1.0.100",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "@ezpz//:Cargo.lock",
    manifests = [
        "@ezpz//:Cargo.toml",
        "@ezpz//ezpz:Cargo.toml",
        "@ezpz//ezpz-cli:Cargo.toml",
        "@ezpz//ezpz-wasm:Cargo.toml",
        "//poc/solver-wasm:Cargo.toml",
    ],
)
crate.annotation(
    crate = "yeslogic-fontconfig-sys",
    build_script_env = {
        "RUST_FONTCONFIG_DLOPEN": "1",
    },
)
crate.annotation(
    crate = "font-kit",
    crate_features = ["source-fontconfig-dlopen"],
)
use_repo(crate, "crates")
