module(
    name = "webcad",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "aspect_rules_ts", version = "3.8.11")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_nodejs", version = "6.7.5")
bazel_dep(name = "aspect_rules_esbuild", version = "0.26.0")

# Configure the Node SDK
node = use_extension("@aspect_rules_js//js:extensions.bzl", "node")
node.toolchain(node_version = "20.11.1")
use_repo(node, "node_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(pnpm_version = "9.1.0")
use_repo(pnpm, "pnpm")

# Configure NPM dependencies
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    npmrc = "//:.npmrc",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")



# Configure the Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

# Configure Gazelle to use go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps)

bazel_dep(name = "rules_rust", version = "0.71.3")

# Configure the Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.88.0"],
)
use_repo(rust, "rust_toolchains")

# Fetch external repositories
third_party_deps = use_extension("//:third_party_deps.bzl", "third_party_deps")
use_repo(third_party_deps, "ezpz")

# Configure external crates from the ezpz Cargo workspace
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "@ezpz//:Cargo.lock",
    manifests = [
        "@ezpz//:Cargo.toml",
        "@ezpz//ezpz:Cargo.toml",
        "@ezpz//ezpz-cli:Cargo.toml",
    ],
)
crate.annotation(
    crate = "yeslogic-fontconfig-sys",
    build_script_env = {
        "RUST_FONTCONFIG_DLOPEN": "1",
    },
)
crate.annotation(
    crate = "font-kit",
    crate_features = ["source-fontconfig-dlopen"],
)
use_repo(crate, "crates")
