module(
    name = "webcad",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Configure the Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.25.0",
)
use_repo(go_sdk, "go_sdk")

# Configure Gazelle to use go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "bazel_gazelle_go_repository_config", "com_github_google_go_github_v62", "com_github_spf13_cobra", "org_golang_google_protobuf", "org_gonum_v1_gonum")

bazel_dep(name = "rules_rust", version = "0.71.3")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.71.3")

# Configure the Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = ["wasm32-unknown-unknown"],
    versions = ["1.88.0"],
)
use_repo(rust, "rust_toolchains")

# Fetch external repositories
third_party_deps = use_extension("//:third_party_deps.bzl", "third_party_deps")
use_repo(third_party_deps, "ezpz")

# Configure external crates from the ezpz Cargo workspace
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1.0.100",
)
crate.spec(
    package = "serde_json",
    version = "1.0.100",
)
crate.spec(
    package = "wasm-bindgen",
    version = "=0.2.121",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "@ezpz//:Cargo.toml",
        "@ezpz//ezpz:Cargo.toml",
        "@ezpz//ezpz-cli:Cargo.toml",
        "@ezpz//ezpz-wasm:Cargo.toml",
    ],
)
crate.annotation(
    build_script_env = {
        "RUST_FONTCONFIG_DLOPEN": "1",
    },
    crate = "yeslogic-fontconfig-sys",
)
crate.annotation(
    crate = "font-kit",
    crate_features = ["source-fontconfig-dlopen"],
)
use_repo(crate, "crates")

bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
bazel_dep(name = "aspect_rules_ts", version = "3.1.0")
bazel_dep(name = "aspect_rules_esbuild", version = "0.26.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_gazelle_prebuilt", version = "0.0.22")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.11.1")
use_repo(node, "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npm_package_target_name = "{dirname}",
    pnpm_lock = "//web:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

rules_ts = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts.deps(ts_version_from = "//web:package.json")
use_repo(rules_ts, "npm_typescript")
