load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "poc_lib",
    srcs = ["main.go"],
    importpath = "github.com/gonzojive/webcad/poc",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "poc",
    data = [
        "ui/index.html",
        "//poc/solver-wasm:solver_wasm_bindgen",
    ] + glob(["dist/**/*.js"]),
    embed = [":poc_lib"],
    visibility = ["//visibility:public"],
)
