load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "gcs_proto",
    srcs = ["gcs.proto"],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:duration_proto"],
)

go_proto_library(
    name = "gcs_go_proto",
    importpath = "github.com/gonzojive/webcad/proto",
    proto = ":gcs_proto",
    visibility = ["//visibility:private"],
)

go_library(
    name = "proto",
    srcs = ["types.go"],
    embed = [":gcs_go_proto"],
    importpath = "github.com/gonzojive/webcad/proto",
    visibility = ["//visibility:public"],
)
