load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")

# gazelle:js_tsconfig_file tsconfig.json
# gazelle:resolve js node:assert //web:node_modules/@types/node
# gazelle:resolve js node:test //web:node_modules/@types/node
# gazelle:resolve ts node:assert //web:node_modules/@types/node
# gazelle:resolve ts node:test //web:node_modules/@types/node
# gazelle:resolve js @angular/core //web:node_modules/@angular/core
# gazelle:resolve js @angular/common //web:node_modules/@angular/common
# gazelle:resolve js @angular/platform-browser //web:node_modules/@angular/platform-browser
# gazelle:resolve js @angular/platform-browser-dynamic //web:node_modules/@angular/platform-browser-dynamic
# gazelle:resolve js rxjs //web:node_modules/rxjs
# gazelle:resolve js zone.js //web:node_modules/zone.js
# gazelle:resolve ts @angular/core //web:node_modules/@angular/core
# gazelle:resolve ts @angular/common //web:node_modules/@angular/common
# gazelle:resolve ts @angular/platform-browser //web:node_modules/@angular/platform-browser
# gazelle:resolve ts @angular/platform-browser-dynamic //web:node_modules/@angular/platform-browser-dynamic
# gazelle:resolve ts rxjs //web:node_modules/rxjs
# gazelle:resolve ts zone.js //web:node_modules/zone.js
package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)
