load("@rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "poc_lib",
    srcs = ["main.go"],
    importpath = "github.com/gonzojive/webcad/web/poc",
    visibility = ["//visibility:private"],
    deps = [
        "@rules_go//go/runfiles",
    ],
)

go_binary(
    name = "poc",
    data = [
        "//web/poc/gcsapi:gcsapi_lib",
        "//web/poc/ui:index.html",
        "//web/poc/ui:ui_lib",
    ],
    embed = [":poc_lib"],
    tags = ["ibazel_notify_changes"],
    visibility = ["//visibility:public"],
)
