load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runfilesserver",
    srcs = ["runfilesserver.go"],
    importpath = "github.com/gonzojive/webcad/web/runfilesserver",
    visibility = ["//visibility:public"],
    deps = ["@rules_go//go/runfiles"],
)

go_test(
    name = "runfilesserver_test",
    srcs = ["runfilesserver_test.go"],
    data = glob(["testdata/**"]),
    embed = [":runfilesserver"],
)
