load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "devtool_lib",
    srcs = ["main.go"],
    importpath = "github.com/gonzojive/webcad/go/cmd/devtool",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_go_github_v62//github",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "devtool",
    embed = [":devtool_lib"],
    visibility = ["//visibility:public"],
)
