load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "hello_world_lib",
    srcs = ["hello_world.go"],
    importpath = "github.com/gonzojive/webcad/go/cmd/hello_world",
    visibility = ["//visibility:private"],
    deps = ["@rules_go//go/runfiles:go_default_library"],
)

go_binary(
    name = "hello_world",
    data = [
        "//web/angular_hello_world:assets",
        "//web/angular_hello_world:bundle",
    ],
    embed = [":hello_world_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "hello_world_test",
    srcs = ["hello_world_test.go"],
    embed = [":hello_world_lib"],
)
