load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "wasm_solver",
    embed = [":wasm_solver_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

go_library(
    name = "wasm_solver_lib",
    srcs = ["main.go"],
    importpath = "github.com/gonzojive/webcad/go/cmd/wasm_solver",
    visibility = ["//visibility:private"],
    deps = select({
        "@rules_go//go/platform:js_wasm": [
            "//go/solvers/bfgs",
            "//go/solvers/lm",
            "//proto",
            "@org_golang_google_protobuf//encoding/protojson",
        ],
        "//conditions:default": [],
    }),
)
