load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "evaluator.go",
        "solver.go",
        "types.go",
        "utils.go",
    ],
    importpath = "github.com/gonzojive/webcad/go/solvers/core",
    visibility = ["//visibility:public"],
    deps = [
        "//go/solvers/core/constraints",
        "//go/solvers/core/gcstypes",
        "//proto",
        "@org_gonum_v1_gonum//mat",
    ],
)

go_test(
    name = "core_test",
    srcs = ["evaluator_test.go"],
    embed = [":core"],
    deps = [
        "//go/solvers/core/gcstypes",
        "//proto",
        "@org_gonum_v1_gonum//diff/fd",
    ],
)
