load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lm",
    srcs = [
        "algorithm.go",
        "doc.go",
        "qr.go",
        "solver.go",
        "workspace.go",
    ],
    importpath = "github.com/gonzojive/webcad/go/solvers/lm",
    visibility = ["//visibility:public"],
    deps = [
        "//go/solvers/core",
        "//go/solvers/core/gcstypes",
        "//proto",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_gonum_v1_gonum//blas",
        "@org_gonum_v1_gonum//blas/blas64",
        "@org_gonum_v1_gonum//lapack/lapack64",
        "@org_gonum_v1_gonum//mat",
    ],
)

go_test(
    name = "lm_test",
    srcs = ["solver_test.go"],
    embed = [":lm"],
    deps = [
        "//go/solvers/core",
        "//proto",
        "@org_gonum_v1_gonum//lapack/lapack64",
        "@org_gonum_v1_gonum//mat",
    ],
)
