load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

# Managed by Gazelle
ts_project(
    name = "gcsapi",
    srcs = ["gcsapi.ts"],
    declaration = True,
    source_map = True,
    tsconfig = ":tsconfig",
)
