load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

# gazelle:resolve js web/poc/solver-wasm/solver_wasm_bindgen/solver_wasm_bindgen.js //web/poc/solver-wasm:solver_wasm_bindgen
# Managed by Gazelle
ts_project(
    name = "gcsapi",
    srcs = ["gcsapi.ts"],
    declaration = True,
    source_map = True,
    tsconfig = "//web:tsconfig",
    deps = ["//web/poc/solver-wasm:solver_wasm_bindgen"],
)
