load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//web:@angular/compiler-cli/package_json.bzl", compiler_cli = "bin")

package(default_visibility = ["//visibility:public"])

compiler_cli.ngc_binary(name = "ngc")

ts_project(
    name = "ui",
    srcs = [
        "main.ts",
    ],
    declaration = True,
    source_map = True,
    transpiler = "tsc",
    tsc = ":ngc",
    tsconfig = ":tsconfig",
    deps = [
        "//web:node_modules/@angular/platform-browser",
        "//web:node_modules/zone.js",
        "//web/poc/ui/app",
    ],
)

esbuild(
    name = "bundle",
    entry_point = "main.ts",
    external = ["../solver-wasm/solver_wasm_bindgen/solver_wasm_bindgen.js"],
    format = "esm",
    minify = True,
    output = "bundle.js",
    platform = "browser",
    sourcemap = "inline",
    deps = [":ui"],
)

filegroup(
    name = "assets",
    srcs = ["index.html"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)
