load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//web:@angular/compiler-cli/package_json.bzl", compiler_cli = "bin")

package(default_visibility = ["//visibility:public"])

compiler_cli.ngc_binary(name = "ngc")

ts_project(
    name = "ui",
    srcs = [
        "main.ts",
    ],
    declaration = True,
    source_map = True,
    transpiler = "tsc",
    tsc = ":ngc",
    tsconfig = ":tsconfig",
    deps = [
        "//web:node_modules/@angular/compiler",
        "//web:node_modules/@angular/platform-browser",
        "//web:node_modules/zone.js",
        "//web/poc/ui/app",
    ],
)

genrule(
    name = "copy_wasm_solver",
    srcs = ["//go/cmd/wasm_solver"],
    outs = ["wasm_solver.wasm"],
    cmd = "cp $< $@",
)

genrule(
    name = "copy_wasm_exec",
    srcs = ["@go_sdk//:lib/wasm/wasm_exec.js"],
    outs = ["wasm_exec.js"],
    cmd = "cp $< $@",
)

esbuild(
    name = "bundle",
    entry_point = "main.ts",
    format = "esm",
    minify = True,
    output = "bundle.js",
    platform = "browser",
    sourcemap = "inline",
    deps = [":ui"],
)

filegroup(
    name = "assets",
    srcs = [
        "index.html",
        ":wasm_exec.js",
        ":wasm_solver.wasm",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)
