load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//web:@angular/compiler-cli/package_json.bzl", compiler_cli = "bin")

package(default_visibility = ["//visibility:public"])

compiler_cli.ngc_binary(name = "ngc")

ts_project(
    name = "ui",
    srcs = [
        "main.ts",
    ],
    declaration = True,
    source_map = True,
    transpiler = "tsc",
    tsc = ":ngc",
    tsconfig = ":tsconfig",
    deps = [
        "//web:node_modules/@angular/compiler",
        "//web:node_modules/@angular/platform-browser",
        "//web:node_modules/zone.js",
        "//web/poc/ui/app",
    ],
)

genrule(
    name = "copy_wasm_solver",
    srcs = ["//go/cmd/wasm_solver"],
    outs = ["wasm_solver.wasm"],
    cmd = "cp $< $@",
)

genrule(
    name = "copy_wasm_exec",
    srcs = ["@go_sdk//:lib/wasm/wasm_exec.js"],
    outs = ["wasm_exec.js"],
    cmd = "cp $< $@",
)

# Extract and rename the compiled resvg WebAssembly binary from the third-party npm package
# directory target. This places it directly inside the UI package output bundle as a static asset,
# allowing the Go development server to serve it at "/ui/resvg_index_bg.wasm" for browser consumption
# without name collisions (e.g. if another WASM module was also named "index_bg.wasm").
genrule(
    name = "copy_resvg_wasm",
    srcs = ["//web:node_modules/@resvg/resvg-wasm/dir"],
    outs = ["resvg_index_bg.wasm"],
    cmd = "cp $(location //web:node_modules/@resvg/resvg-wasm/dir)/index_bg.wasm $@",
)

esbuild(
    name = "bundle",
    entry_point = "main.ts",
    format = "esm",
    minify = True,
    output = "bundle.js",
    platform = "browser",
    sourcemap = "inline",
    deps = [":ui"],
)

filegroup(
    name = "assets",
    srcs = [
        "index.html",
        ":copy_resvg_wasm",
        ":wasm_exec.js",
        ":wasm_solver.wasm",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)
