load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "constraints",
    srcs = [
        "angle.go",
        "coincidence.go",
        "concentric.go",
        "distance.go",
        "doc.go",
        "evaluator.go",
        "fixed.go",
        "horizontal.go",
        "horizontal_distance.go",
        "midpoint.go",
        "parallel.go",
        "perpendicular.go",
        "registry.go",
        "symmetric.go",
        "tangent.go",
        "utils.go",
        "vertical.go",
        "vertical_distance.go",
    ],
    importpath = "github.com/gonzojive/webcad/go/solvers/core/constraints",
    visibility = ["//visibility:public"],
    deps = [
        "//go/solvers/core/gcstypes",
        "//proto",
        "@org_gonum_v1_gonum//mat",
    ],
)

go_test(
    name = "constraints_test",
    srcs = [
        "angle_test.go",
        "coincidence_test.go",
        "concentric_test.go",
        "distance_test.go",
        "fixed_test.go",
        "horizontal_distance_test.go",
        "horizontal_test.go",
        "midpoint_test.go",
        "parallel_test.go",
        "perpendicular_test.go",
        "symmetric_test.go",
        "tangent_test.go",
        "vertical_distance_test.go",
        "vertical_test.go",
    ],
    deps = [
        ":constraints",
        "//go/solvers/core",
        "//go/solvers/core/gcstypes",
        "//proto",
        "@org_gonum_v1_gonum//diff/fd",
        "@org_gonum_v1_gonum//mat",
    ],
)
